--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,20 @@
 {
     "name": "laravel/laravel",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
+        "laravel/framework": "5.2.*",
         "illuminate/Html": "^5.0",
-	    "zizaco/entrust": "dev-laravel-5",
-        "laravelcollective/html": "5.1.*",
-	    "guzzlehttp/guzzle": "~6.0",
-	    "caffeinated/modules": "2.1.11",
+        "zizaco/entrust": "dev-laravel-5",
+        "laravelcollective/html": "^5.2.0",
+        "guzzlehttp/guzzle": "~6.0",
+        "caffeinated/modules": "2.1.11",
         "google/apiclient": "1.*",
         "vluzrmos/slack-api": "^0.4.8",
         "intervention/image": "^2.3",
@@ -19,16 +22,15 @@
         "guillermomartinez/filemanager-php": "0.1.*",
         "webpatser/laravel-uuid": "2.*",
         "intervention/httpauth": "^2.0"
-
-
-
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-	"barryvdh/laravel-debugbar": "^2.0"
+        "barryvdh/laravel-debugbar": "^2.0",
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "symfony/css-selector": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
@@ -45,13 +47,11 @@
     },
     "scripts": {
         "post-install-cmd": [
-            "php artisan clear-compiled",
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize"
         ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
         ],
         "post-root-package-install": [
