--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
         "illuminate/Html": "^5.0",
         "zizaco/entrust": "5.2.x-dev",
-        "laravelcollective/html": "^5.2.0",
+        "laravelcollective/html": "5.3.*",
         "guzzlehttp/guzzle": "~6.0",
-         "caffeinated/modules": "~2.0",
+        "caffeinated/modules": "~2.0",
         "google/apiclient": "1.*",
         "vluzrmos/slack-api": "^0.4.8",
         "intervention/image": "^2.3",
@@ -26,11 +26,11 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~5.0",
         "phpspec/phpspec": "~2.1",
         "barryvdh/laravel-debugbar": "^2.0",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
-        "symfony/css-selector": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "3.1.*",
+        "symfony/css-selector": "3.1.*"
     },
     "autoload": {
         "classmap": [
